--- a/assignment2/heat_base/Makefile
+++ b/assignment2/heat_base/Makefile
@@ -1,16 +1,23 @@
 # Intel compiler
 CC =  icc
-CFLAGS = -O0
+CFLAGS = -O2
 
 MPICC = mpicc
 
 all: heat
 
+best: papiO3
+
+papiO2: heat
+
+papiO3: CFLAGS = -O3 -xhost -fno-alias
+papiO3: heat
+
 heat : heat.o input.o misc.o timing.o relax_gauss.o relax_jacobi.o
-	$(CC) $(CFLAGS) -o $@ $+ -lm 
+	$(CC) $(CFLAGS) $(PAPI_INC) -o $@ $+ -lm 
 
 %.o : %.c heat.h timing.h input.h
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -c -o $@ $< $(PAPI_LIB)
 
 clean:
 	rm -f *.o heat *~ *.ppm
