--- a/assignment2/heat_base/Makefile
+++ b/assignment2/heat_base/Makefile
@@ -14,10 +14,10 @@ papiO3: CFLAGS = -O3 -xhost -fno-alias
 papiO3: heat
 
 heat : heat.o input.o misc.o timing.o relax_gauss.o relax_jacobi.o
-	$(CC) $(CFLAGS) $(PAPI_INC) -o $@ $+ -lm 
+	$(CC) $(CFLAGS) -o $@ $+ -lm $(PAPI_LIB)
 
 %.o : %.c heat.h timing.h input.h
-	$(CC) $(CFLAGS) -c -o $@ $< $(PAPI_LIB)
+	$(CC) $(CFLAGS) $(PAPI_INC) -c -o $@ $< 
 
 clean:
 	rm -f *.o heat *~ *.ppm
