rate measure or HL measure preproc

--- a/assignment2/heat_base/Makefile
+++ b/assignment2/heat_base/Makefile
@@ -10,8 +10,14 @@ best: papiO3
 
 papiO2: heat
 
+papiO2_rate: CFLAGS += -DRATE
+papiO2_rate: heat
+
 papiO3: CFLAGS = -O3 -xhost -fno-alias
 papiO3: heat
+
+papiO3_rate: CFLAGS = -O3 -xhost -fno-alias -DRATE
+papiO3_rate: heat
 
 heat : heat.o input.o misc.o timing.o relax_gauss.o relax_jacobi.o
 	$(CC) $(CFLAGS) -o $@ $+ -lm $(PAPI_LIB)
