--- a/assignment3/heat_base/Makefile
+++ b/assignment3/heat_base/Makefile
@@ -7,10 +7,10 @@ MPICC = mpicc
 all: heat
 
 heat : heat.o input.o misc.o timing.o relax_gauss.o relax_jacobi.o
-	$(CC) $(CFLAGS) -o $@ $+ -lm 
+	$(CC) $(CFLAGS) -o $@ $+ -lm $(PAPI_LIB) 
 
 %.o : %.c heat.h timing.h input.h
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) $(PAPI_INC) -c -o $@ $<
 
 clean:
 	rm -f *.o heat *~ *.ppm
