added results with mpiexec and srun

--- a/assignment5/Makefile
+++ b/assignment5/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -O3
 
 all: pingpong 
 
-pingpong : ping_pong.o
+pingpong : pingpong.o
 	$(CC) $(CFLAGS) -o pingpong $+ -lm  
 
 %.o : %.c %.h
