--- a/assignment6/HeatForOMP/Makefile
+++ b/assignment6/HeatForOMP/Makefile
@@ -6,10 +6,10 @@ MPICC = mpicc
 all: heat 
 
 heat : heat.o input.o misc.o timing.o relax_jacobi.o
-	$(CC) $(CFLAGS) -o heat $+ -lm  
+	$(MPICC) $(CFLAGS) -o heat $+ -lm  
 
 %.o : %.c %.h
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(MPICC) $(CFLAGS) -c -o $@ $<
 
 clean:
 	rm -f *.o heat *~ *.ppm
